# SaveBox2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Relatorio_Tecnico_SaveBox.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: CMakeLists.txt  main.cpp
backend/include/: ApiRouter.hpp  AuthService.hpp  CryptoService.hpp  utils.hpp
backend/include/Services/: AuthService.hpp  EmailQueueProcessor.hpp  EmailService.hpp
backend/include/controllers/: ApiRouter.hpp
backend/include/database/: DatabaseMigration.hpp  DatabasePool.hpp  FileManager.hpp  FolderManager.hpp
backend/include/middlewares/: RateLimitMiddleware.hpp
backend/include/storage/: FileChunker.hpp  FolderManager.hpp  GarbageCollector.hpp  StorageService.hpp
backend/include/utils/: utils.hpp
backend/src/: ApiRouter.cpp  AuthService.cpp  CryptoService.cpp  main.cpp
backend/src/Services/: AuthService.cpp  CryptoService.cpp  EmailQueueProcessor.cpp  EmailService.cpp  StorageService.cpp
backend/src/controllers/: ApiRouter.cpp
backend/src/database/: DatabaseMigration.cpp  DatabasePool.cpp  FileManager.cpp  FolderManager.cpp
backend/src/storage/: FileChunker.cpp  FolderManager.cpp  GarbageCollector.cpp  StorageService.cpp
backend/tests/: integration_db.cpp  main_test.cpp  test_api_auth.cpp  test_api_delete_file.cpp  test_api_delete_folder.cpp  test_api_download.cpp  test_api_download_resume.cpp  test_api_files.cpp  test_api_folders.cpp  test_api_list_folder.cpp  test_api_quotas.cpp  test_api_share.cpp  test_api_trash.cpp  test_api_tree.cpp  test_api_update_items.cpp  test_api_upload_resume.cpp  test_auth.cpp  test_crypto.cpp  test_crypto_corruption.cpp  test_database.cpp  test_email_service.cpp  test_email_validator.cpp  test_file_chunker.cpp  test_folder_manager.cpp  test_garbage_collector.cpp  test_helpers.hpp  test_memory_limits.cpp  test_migration.cpp  test_race_conditions.cpp  test_rate_limiter.cpp  test_storage.cpp
client-cli-java/: run.bat
client-cli-java/src/: SaveBoxClient.java
client-web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
client-web/public/: sw.js
client-web/src/: App.vue  style.css
client-web/src/components/: AppHeader.vue  AppSidebar.vue  FileExplorer.vue  TransferManager.vue  TrashBin.vue
client-web/src/components/modals/: ModalCreateFolder.vue  ModalPreview.vue  ModalRename.vue  ModalShare.vue
client-web/src/composables/: useApi.js  useAuth.js  useCrypto.js  useExplorer.js  useSharing.js  useTheme.js  useToast.js  useTransfers.js
client-web/tests/: setup.js
client-web/tests/components/: AppHeader.test.js  AppSidebar.test.js  FileExplorer.test.js  TransferManager.test.js  TrashBin.test.js
client-web/tests/components/modals/: ModalCreateFolder.test.js  ModalPreview.test.js  ModalRename.test.js  ModalShare.test.js
client-web/tests/composables/: useApi.test.js  useAuth.test.js  useCrypto.test.js  useExplorer.test.js  useSharing.test.js  useTheme.test.js  useToast.test.js  useTransfers.test.js
config/: disposable_domains.txt
docs/: swagger.yaml
